data/derived/comb/progs/unify/prog7714.ml.out
Characters 284-286:
  removeZero (add ( (if l1 > l2 then l1 else l2) (padZero l1 l2)));;
                                                          ^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type int list
